--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,6 +64,25 @@
         {
             "type": "lldb",
             "request": "launch",
+            "name": "Debug integration test 'test_undirected_multi'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--test=test_undirected_multi",
+                    "--package=graphrs"
+                ],
+                "filter": {
+                    "name": "test_undirected_multi",
+                    "kind": "test"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
             "name": "Debug integration test 'test_generators'",
             "cargo": {
                 "args": [
