--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "graphrs"
 version = "0.1.0"
-authors = ["Malcolm van Raalte <malcolm@gainx.com>"]
+authors = ["Malcolm van Raalte <malcolm@van.raalte.ca>"]
+description = "GraphRS is a Rust package for the creation, manipulation and analysis of graphs."
 edition = "2018"
+license = "MIT"
+homepage = "https://github.com/malcolmvr/graphrs"
+repository = "https://github.com/malcolmvr/graphrs"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
