--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/malcolmvr/graphrs"
 readme = "README.md"
 keywords = ["graph", "network", "network analysis", "nodes", "edges", "vertex", "vertices", "directed", "undirected", "acyclic", "multigraph", "graph theory", "weighted graph", "social network analysis"]
 categories = ["data-structures", "algorithms", "mathematics", "science"]
+exclude = [".vscode/*", "tests/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
