--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ exclude = [".vscode/*", "tests/*"]
 itertools = "0.10.0"
 serde = { version = "1.0", optional = true, features = ["derive"] }
 rand = "0.8.4"
+rand_chacha = "0.3.1"
 rayon = "1.5.1"
