--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ exclude = [".vscode/*", "tests/*"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+doc-comment = "0.3.3"
 itertools = "0.10.0"
 serde = { version = "1.0", optional = true, features = ["derive"] }
 rand = "0.8.4"
