--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ exclude = [".vscode/*", "tests/*"]
 [dependencies]
 doc-comment = "0.3.3"
 itertools = "0.10.0"
+quick-xml = "0.22.0"
 serde = { version = "1.0", optional = true, features = ["derive"] }
 rand = "0.8.4"
 rand_chacha = "0.3.1"
