--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ exclude = [".vscode/*", "tests/*"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+statrs = "0.16.0"
 doc-comment = "0.3.3"
 itertools = "0.12.1"
 quick-xml = "0.31.0"
@@ -23,3 +24,4 @@ serde = { version = "1.0.197", optional = true, features = ["derive"] }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rayon = "1.9.0"
+vec_to_array = "0.2.1"
