--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ exclude = [".vscode/*", "tests/*"]
 doc-comment = "0.3.3"
 itertools = "0.12.1"
 nohash = "0.2.0"
+orx-priority-queue = "1.4.0"
 quick-xml = "0.31.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
@@ -27,3 +28,6 @@ serde = { version = "1.0.197", optional = true, features = ["derive"] }
 sorted-vec = "0.8.5"
 statrs = "0.16.0"
 vec_to_array = "0.2.1"
+
+[profile.release]
+debug = 2
