--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ exclude = [".vscode/*", "tests/*"]
 
 [dependencies]
 doc-comment = "0.3.3"
+indexmap = "2.6.0"
 itertools = "0.12.1"
 nohash = "0.2.0"
 orx-priority-queue = "1.4.0"
@@ -24,8 +25,10 @@ quick-xml = "0.31.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rayon = "1.9.0"
+rudac = "0.8.3"
 serde = { version = "1.0.197", optional = true, features = ["derive"] }
 sorted-vec = "0.8.5"
+sprs = "0.11.2"
 statrs = "0.16.0"
 vec_to_array = "0.2.1"
 
