--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "graphrs"
-version = "0.10.2"
+version = "0.11.0"
 authors = ["Malcolm van Raalte <malcolm@van.raalte.ca>"]
 description = "graphrs is a Rust package for the creation, manipulation and analysis of graphs."
 edition = "2018"
@@ -16,12 +16,18 @@ exclude = [".vscode/*", "tests/*"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-statrs = "0.16.0"
 doc-comment = "0.3.3"
-itertools = "0.12.1"
-quick-xml = "0.31.0"
-serde = { version = "1.0.197", optional = true, features = ["derive"] }
+itertools = "0.13.0"
+nohash = "0.2.0"
+quick-xml = "0.37.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
-rayon = "1.9.0"
-vec_to_array = "0.2.1"
+rayon = "1.10.0"
+serde = { version = "1.0.215", optional = true, features = ["derive"] }
+sorted-vec = "0.8.5"
+sprs = { version = "0.11.2", optional = true }
+statrs = "0.18.0"
+vec_to_array = "0.2.5"
+
+[features]
+adjacency_matrix = ["dep:sprs"]
