--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "graphrs"
-version = "0.11.2"
+version = "0.11.3"
 authors = ["Malcolm van Raalte <malcolm@van.raalte.ca>"]
 description = "graphrs is a Rust package for the creation, manipulation and analysis of graphs."
 edition = "2018"
@@ -24,7 +24,7 @@ quick-xml = "0.37.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
-serde = { version = "1.0.215", optional = true, features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 sorted-vec = "0.8.5"
 sprs = { version = "0.11.2", optional = true }
 statrs = "0.18.0"
