--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ build = "build.rs"
 assert_approx_eq = "1.1.0"
 doc-comment = "0.3.3"
 itertools = "0.13.0"
-lapack-sys = "0.14.0"
+lapack-sys = { version = "0.14.0", optional = true }
 nalgebra = { version = "0.33.2", optional = true }
 ndarray = { version = "0.16.1", optional = true }
 nohash = "0.2.0"
@@ -33,7 +33,7 @@ sorted-vec = "0.8.5"
 sprs = { version = "0.11.2", optional = true }
 
 [features]
-adjacency_matrix = ["dep:nalgebra", "dep:ndarray", "dep:sprs"]
+adjacency_matrix = ["dep:lapack-sys", "dep:nalgebra", "dep:ndarray", "dep:sprs"]
 
 [package.metadata."docs.rs"]
 all-features = true
