--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ build = "build.rs"
 
 [dependencies]
 assert_approx_eq = "1.1.0"
+assert_unordered = "0.3.5"
 doc-comment = "0.3.3"
 itertools = "0.13.0"
 lapack-sys = { version = "0.14.0", optional = true }
